[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/StatsBar3D/StatsBarTop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/StatsBar3D/StatsBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/StatsBar3D/StatsBar3D.gd" type="Script" id=3]
[ext_resource path="res://Scenes/StatsBar3D/GlowBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/StatsBar3D/GlowBarTop.tscn" type="PackedScene" id=5]

[node name="StatsBar3D" type="Spatial"]
script = ExtResource( 3 )
glow_amount = 1.0

[node name="Tween" type="Tween" parent="."]

[node name="StatsBar" parent="." instance=ExtResource( 2 )]

[node name="StatsBarTop" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.81, 0 )

[node name="GlowBar" parent="." instance=ExtResource( 4 )]
visible = false

[node name="GlowBarTop" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.82, 0 )
visible = false
